2009-09-26  Bernhard Walle <bernhard@bwalle.de>

	* Update libbw to 0.1.2.
	* Move completion to libbw.

2009-09-20  Bernhard Walle <bernhard@bwalle.de>

	* Add libbw.
	* Use Debug class from 'libbw'.
	* Use stringutil functions from 'libbw'.
	* Strip ';' when parsing /var/lib/dhcp3/dhclient.*.

2009-09-19  Bernhard Walle <bernhard@bwalle.de>

	* Add support for dhclient to retrieve the TFTP server.

2009-09-06  Bernhard Walle <bernhard@bwalle.de>

	* Add RHEL/CentOS >= 5.3 to the whitelist.
	* Add Fedora >= 11 to the whitelist.
	* Implement 'load-only' option as replacement for the old "dry-run"
	  option in version 0.1.x.
	* Implement '--version'.
	* Fix compile warnings on openSUSE Factory (11.2).
	* Add Debian >= 5.0 to the whitelist.

2009-08-30  Bernhard Walle <bernhard@bwalle.de>

	* Add 'dist.sh' script to create releases.
	* Adapt INSTALL to CMake.

2009-08-27  Bernhard Walle <bernhard@bwalle.de>

	* Implement option --ignore-whitelist.
	* Implement '--force' option to have also the old behaviour ('kexec -e'
	  at the end of pxe-kexec).
	* Implement '--print-distribution' option that just prints out what
	  Linux flavour we detected on the currently running system.

2009-08-26  Bernhard Walle <bernhard@bwalle.de>

	* Change strip() in stringutil to take an optional argument that
	  specifies which characters to strip.

2009-08-22  Bernhard Walle <bernhard@bwalle.de>

	* Change the behaviour of '--dry-run' to just print every call to
	  kexec on stderr. Previously, just the final 'kexec -e' was not executed.
	  Also don't switch the virtual terminal and just print a message that
	  this would be done.
	* Print an error message if the effective user ID does not belong root.

2009-08-09  Bernhard Walle <bernhard@bwalle.de>

	* Specify the default label with '-l <label>' instead of an argument.

2009-07-26  Bernhard Walle <bernhard@bwalle.de>

	* Parse the keywords case-insensitive (e.g. accept also 'SAY', not only
	  'say').